--- a/.github/workflows/github-hosting-merge.yml
+++ b/.github/workflows/github-hosting-merge.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           python-version: '3.9'
       - run: pip install mkdocs mkdocs-bootswatch
-      - run: mkdocs build && mkdocs gh-deploy
+      - run: mkdocs gh-deploy
