--- a/.github/workflows/github-hosting-merge.yml
+++ b/.github/workflows/github-hosting-merge.yml
@@ -10,9 +10,9 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - run: pip install mkdocs mkdocs-bootswatch
-      - run: mkdocs build && mkdocs gh-deploy
+      - run: mkdocs gh-deploy
