--- a/.github/workflows/github-hosting-merge.yml
+++ b/.github/workflows/github-hosting-merge.yml
@@ -1,27 +1,29 @@
 # build the page and deploy to the org site repo
 
-name: Deploy to GH pages on merge
-'on':
-  push:
-    branches:
-      - main
-jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          path: main
-      - name: Checkout gh-pages
-        uses: actions/checkout@v3
-        with:
-          repository: MethodsDev/methodsdev.github.io
-          path: gh-pages
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - run: |
-          pip install mkdocs mkdocs-bootswatch
-          cd gh-pages
-          mkdocs gh-deploy --config-file ../main/mkdocs.yml --remote-branch main
+# name: Deploy to Firebase Hosting on merge
+# 'on':
+#   push:
+#     branches:
+#       - main
+# jobs:
+#   build_and_deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.10'
+#       - run: |
+#           pip install mkdocs mkdocs-bootswatch
+#           mkdocs build
+#       - id: auth
+#         uses: google-github-actions/auth@v0.8.1
+#         with:
+#           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ }}
+#       - id: deploy
+#         uses: FirebaseExtended/action-hosting-deploy@v0
+#         with:
+#           repoToken: '${{ secrets.GITHUB_TOKEN }}'
+#           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ }}'
+#           channelId: live
+#           projectId: ''
