--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,9 @@ docs_dir: src
 site_dir: public
 repo_url: https://github.com/MethodsDev/mdl-site
 edit_uri: edit/main/src/
+nav:
+    - 'index.md'
+    - 'about.md'
 plugins:
   - search
 markdown_extensions:
