--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ edit_uri: edit/main/src/
 nav:
     - 'index.md'
     - 'about.md'
+    - 'comp-docs/index.md'
 plugins:
   - search
 markdown_extensions:
