--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,21 @@
 site_name: MDL
-theme: slate
+theme:
+  name: material
+  palette:
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 docs_dir: src
 site_dir: public
 repo_url: https://github.com/MethodsDev/mdl-site
