--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.10'
       - run: |
-          pip install mkdocs mkdocs-bootswatch
+          pip install mkdocs mkdocs-bootswatch mkdocs-material
           mkdocs build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
